# QMaterialIcons

./: .travis.yml  CMakeLists.txt  qmaterialicons-config.cmake  qmaterialicons.pc.cmakein
